# CChess

client/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  chesslabel.cpp  chesslabel.h  chessroom.cpp  chessroom.h  chessroom.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
server/: Bishop.cpp  Bishop.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Server.cpp  Server.h  main.cpp
